--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 	{% endif %}
 
 	<a href="{{ link | prepend: site.baseurl }}">
-		<img src="http://www.gravatar.com/avatar/{{ site.author_gravatar }}.png?s=80" class="gravatar">
+		<img src="https://pic.cnblogs.com/avatar/1062722/20170405165821.png?s=80" class="gravatar">
 	</a>
 	<span class="logo-prompt">{{ prompt }}</span>
 
