--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		{% assign prompt = 'Back to Home' %}
 	{% endif %}
 
-	<a href="{{ link | prepend: site.baseurl }}" class="gravatar-container">
+	<a href="{{ link | prepend: site.baseurl }}">
 		<img src="http://123.56.135.166/resource/img/avatar.png" class="gravatar">
 	</a>
 	<span class="logo-prompt">{{ prompt }}</span>
